fix: z-index

--- a/app/vmui/packages/vmui/src/pages/StreamContext/style.scss
+++ b/app/vmui/packages/vmui/src/pages/StreamContext/style.scss
@@ -60,7 +60,7 @@
     gap: $padding-large;
     border-bottom: $border-divider;
     background-color: $color-background-block;
-    z-index: 1;
+    z-index: 11;
 
     &_page {
       border-top: $border-divider;
